--- a/Model Deployment.ipynb
+++ b/Model Deployment.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ab97ccf5",
+   "id": "f61b8a6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "76fc9165",
+   "id": "436d84cc",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "57718f4d",
+   "id": "c955833a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c01707e6",
+   "id": "190cef46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ec20ee05",
+   "id": "19873c5b",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0068cabc",
+   "id": "9260a3f2",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "807bcabd",
+   "id": "91ce238f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4789a4c0",
+   "id": "ae0c53f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,9 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4f93ed1c",
-   "metadata": {},
+   "execution_count": 9,
+   "id": "2dcb7a6a",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
