--- a/Model Deployment.ipynb
+++ b/Model Deployment.ipynb
@@ -3,51 +3,31 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f61b8a6a",
+   "id": "7b7c5ef9",
    "metadata": {},
    "outputs": [],
    "source": [
     "from flask import Flask, render_template, request\n",
-    "import joblib, locale"
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "436d84cc",
+   "id": "c7587fdc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'English_India.1252'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Set the locale to the user's default setting\n",
-    "locale.setlocale(locale.LC_ALL, '')"
+    "def formatINR(number):\n",
+    "    s, *d = str(number).partition(\".\")\n",
+    "    r = \",\".join([s[x-2:x] for x in range(-3, -len(s), -2)][::-1] + [s[-3:]])\n",
+    "    return \"\".join([r] + d)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c955833a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def format_currency(value):\n",
-    "    return locale.currency(value, grouping=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "190cef46",
+   "id": "ad53c02d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,30 +36,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "19873c5b",
+   "execution_count": 4,
+   "id": "7b49799d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomizedSearchCV(cv=5,\n",
-       "                   estimator=&lt;catboost.core.CatBoostRegressor object at 0x00000248FAC058D0&gt;,\n",
+       "                   estimator=&lt;catboost.core.CatBoostRegressor object at 0x000002E3CA5B5720&gt;,\n",
        "                   param_distributions={&#x27;learning_rate&#x27;: [0.2, 0.4, 0.5, 0.7,\n",
        "                                                          1],\n",
        "                                        &#x27;n_estimators&#x27;: [100, 400, 700, 800,\n",
        "                                                         1000]},\n",
        "                   verbose=5)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomizedSearchCV</label><div class=\"sk-toggleable__content\"><pre>RandomizedSearchCV(cv=5,\n",
-       "                   estimator=&lt;catboost.core.CatBoostRegressor object at 0x00000248FAC058D0&gt;,\n",
+       "                   estimator=&lt;catboost.core.CatBoostRegressor object at 0x000002E3CA5B5720&gt;,\n",
        "                   param_distributions={&#x27;learning_rate&#x27;: [0.2, 0.4, 0.5, 0.7,\n",
        "                                                          1],\n",
        "                                        &#x27;n_estimators&#x27;: [100, 400, 700, 800,\n",
        "                                                         1000]},\n",
-       "                   verbose=5)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: CatBoostRegressor</label><div class=\"sk-toggleable__content\"><pre>&lt;catboost.core.CatBoostRegressor object at 0x00000248FAC058D0&gt;</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">CatBoostRegressor</label><div class=\"sk-toggleable__content\"><pre>&lt;catboost.core.CatBoostRegressor object at 0x00000248FAC058D0&gt;</pre></div></div></div></div></div></div></div></div></div></div>"
+       "                   verbose=5)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: CatBoostRegressor</label><div class=\"sk-toggleable__content\"><pre>&lt;catboost.core.CatBoostRegressor object at 0x000002E3CA5B5720&gt;</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">CatBoostRegressor</label><div class=\"sk-toggleable__content\"><pre>&lt;catboost.core.CatBoostRegressor object at 0x000002E3CA5B5720&gt;</pre></div></div></div></div></div></div></div></div></div></div>"
       ],
       "text/plain": [
        "RandomizedSearchCV(cv=5,\n",
-       "                   estimator=<catboost.core.CatBoostRegressor object at 0x00000248FAC058D0>,\n",
+       "                   estimator=<catboost.core.CatBoostRegressor object at 0x000002E3CA5B5720>,\n",
        "                   param_distributions={'learning_rate': [0.2, 0.4, 0.5, 0.7,\n",
        "                                                          1],\n",
        "                                        'n_estimators': [100, 400, 700, 800,\n",
@@ -87,7 +67,7 @@
        "                   verbose=5)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,8 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9260a3f2",
+   "execution_count": 5,
+   "id": "608b0c64",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +92,7 @@
        "StandardScaler()"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "91ce238f",
+   "execution_count": 6,
+   "id": "3166a430",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ae0c53f5",
+   "execution_count": 7,
+   "id": "e4a95325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,15 +170,14 @@
     "                 departure_time]]\n",
     "        \n",
     "        scaled_data = scaler.transform(data)\n",
-    "        pred = format_currency(round(model.predict(scaled_data)[0],2))\n",
-    "        pred = ''.join(pred.split())\n",
-    "        return render_template('index.html',prediction_text=f\"The predicted price of your flight is {pred}.\")"
+    "        pred = formatINR(round(model.predict(scaled_data)[0],2))\n",
+    "        return render_template('index.html',prediction_text=f\"The predicted price of your flight is ₹{pred}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2dcb7a6a",
+   "execution_count": null,
+   "id": "f9064492",
    "metadata": {
     "scrolled": true
    },
@@ -218,10 +197,17 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:8080\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [10/Sep/2023 02:26:06] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Sep/2023 02:50:12] \"GET / HTTP/1.1\" 200 -\n",
       "D:\\Anaconda\\lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
       "  warnings.warn(\n",
-      "127.0.0.1 - - [10/Sep/2023 02:26:42] \"POST /predict HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [10/Sep/2023 02:50:41] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4,874.03\n"
      ]
     }
    ],
